<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ChooseConnectDevice">

    <android.support.v7.widget.Toolbar
        android:id="@+id/chooseDevice_toolBar"
        style="@style/MyTitle">
        <TextView
            style="@style/MyTitleTextView2"
            android:text="@string/chooseDevice_title" />
    </android.support.v7.widget.Toolbar>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">
            <TextView
                style="@style/MyDeviceSubTitle"
                android:text="@string/chooseDevice_tv_paired" />
            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                    <ListView
                        android:id="@+id/lv_paired_deviceListView"
                        style="@style/MyListView">
                    </ListView>

                </LinearLayout>
            </ScrollView>


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_weight="2">
            <TextView
                style="@style/MyDeviceSubTitle"
                android:text="@string/chooseDevice_tv_new" />
            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">
                    <ListView
                        android:id="@+id/lv_new_deviceListView"
                        style="@style/MyListView">
                    </ListView>
                </LinearLayout>

            </ScrollView>

        </LinearLayout>


    </LinearLayout>
</LinearLayout>